--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'java'
+apply plugin: 'eclipse'
 
 repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12+'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
     compile group: 'javax.mail', name: 'mail', version: '1.4.7'
-//    compile group: 'javax.activation', name: 'activation', version: '1.1.1'
 }
