--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>library</name>
-	<comment>Project library created by Buildship.</comment>
+	<name>library2017</name>
+	<comment>Project library2017 created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
